# emu8

./: CMakeLists.txt  README.md  chip8  install  run
lib/: CMakeLists.txt  chip8.c  cpu.c  cpu.h  sound.c  sound.h
roms/: TEST.HEX
src/: CMakeLists.txt  main.c
